--- a/Chat/app/build.gradle
+++ b/Chat/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //Anuncios
+    implementation 'com.google.android.gms:play-services-ads:17.1.3'
 }
