--- a/Chat/app/src/main/AndroidManifest.xml
+++ b/Chat/app/src/main/AndroidManifest.xml
@@ -2,27 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app.chat">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Chat.ChatWindow"></activity>
+        <activity android:name=".Nikname"></activity>
+        <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+        <activity
+            android:name=".Chat.ChatWindow"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".Chat.Salas" />
         <activity android:name=".Chat.Categorias" />
-        <activity android:name=".Portada">
+        <activity android:name=".Portada"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9864387520697583~8960866855" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
